--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,12 @@
 body {
-  background-color: #f9f7fe;
+  background-color: #c9fdd742;
   font-family: "Radio Canada Big", sans-serif;
 }
 a {
-  color: #885df1;
+  color: #6892d5;
 }
 .weather-app {
-  background: white;
+  background: #f8fcfb;
   max-width: 600px;
   margin: 45px auto;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
@@ -14,11 +14,11 @@ a {
   padding: 30px;
 }
 header {
-  border-bottom: 1px solid #f9f7fe;
+  border-bottom: 1px solid #79d1c268;
   padding: 0 0 30px 0;
 }
 .search-form-input {
-  background-color: #f9f7fe;
+  background-color: #c9fdd724;
   border: none;
   border-radius: 6px;
   width: 80%;
@@ -26,7 +26,7 @@ header {
   font-size: 16px;
 }
 .search-form-button {
-  background: #885df1;
+  background: #6892d5;
   padding: 15px 30px;
   border: none;
   border-radius: 6px;
@@ -53,7 +53,7 @@ main {
   font-weight: 500;
 }
 .weather-app-details strong {
-  color: #f65282;
+  color: #79d1c3;
 }
 .weather-app-temperature-container {
   display: flex;
@@ -87,16 +87,16 @@ main {
 .weather-forecast-temperatures {
   font-size: 13px;
   text-align: center;
-  color: #f65282;
+  color: #79d1c3;
   margin-top: 10px;
   display: flex;
   justify-content: center;
 }
 .weather-forecast-temperature-min {
-  opacity: 0.5;
+  color: #79d1c29d;
 }
 footer {
-  border-top: 1px solid #f9f7fe;
+  border-top: 1px solid #79d1c268;
   padding: 30px 0 0 0;
   text-align: center;
   font-size: 14px;
